# rust-learn

./: .gitignore  README.md
docs/: .pdm-python  README.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/overrides/: macros.py  main.html
docs/overrides/css/: extra.css
examples/app_cli/: Cargo.toml
examples/app_cli/src/: main.rs
examples/class_type/: Cargo.toml
examples/class_type/src/: main.rs
examples/hello_cargo/src/: main.rs
examples/hello_world/: main.rs
examples/py_binder/: Cargo.toml
examples/py_binder/src/: lib.rs
examples/py_types/: Cargo.toml
examples/py_types/src/: main.rs
http_server/: Cargo.toml  README.md
http_server/src/: main.rs
